Adjusting header styles for very small vw like iPhone 5c. Addressing background-blend issues on iOS Safari.

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -191,7 +191,7 @@ a:active {
   margin: 0.5em auto 2em auto;
   background-image: url(/images/canoe.jpg);
   background-color: hsla(40,10%,10%,0.5);
-  background-blend-mode: color-burn;
+  background-blend-mode: overlay;
   background-position: center;
   background-size: cover;
 }
@@ -286,6 +286,21 @@ footer {
     font-size: 3em;
     letter-spacing: 0.3em;
     padding: 0 0 0 0.3em;
+  }
+  
+  h4 {
+    font-size: 1em;
+    margin-top: 0.3em;
+  }
+}
+
+
+@media screen and (max-width: 480px) {
+
+  h1 {
+    font-size: 2em;
+    letter-spacing: 0.2em;
+    padding: 0 0 0 0.1em;
   }
   
   h4 {
